2011-06-29 :	mkfs <mkfs@thoughtgang.org>
	*	Initial version