@@ -15,7 +15,7 @@ task :default => [:test]
 # ----------------------------------------------------------------------
 spec = Gem::Specification.new do |spec|
   spec.name = 'Ptrace'
-  spec.version = '0.9.0'
+  spec.version = '0.9.1'
   spec.summary = 'Ruby extension library providing an API to POSIX ptrace'
   spec.description = %{...}
 
@@ -44,7 +44,7 @@ Rake::RDocTask.new do |rd|
   rd.main = 'README.rdoc'
   rd.rdoc_dir = 'doc/html'
   rd.rdoc_files << 'README.rdoc'
-  rd.rdoc_files += Dir['lib/BFD.rb']
+  rd.rdoc_files += Dir['lib/Ptrace.rb']
   rd.rdoc_files += Dir['module/rdoc_input/*.rb']
 end
 
