@@ -1,2 +1,6 @@
+2011-07-07 :	mkfs <mkfs@thoughtgang.org>
+	*	Fixed PTRACE_SYSCALL
+	*	Added x86 regs, fpregs, and fpxregs
+	*	Version bump
 2011-06-29 :	mkfs <mkfs@thoughtgang.org>
 	*	Initial version
